add field for notes
